--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ loguru = "^0.7.2"
 aiogram = "^3.12.0"
 envyaml = "^1.10.211231"
 httpx = "^0.27.0"
-proxy_pool = {git = "https://x-token-auth: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@github.com/devtolmachev/proxy_pool_free.git"}
+plotly = "^5.23.0"
+mplfinance = "^0.12.10b0"
 
 
 [build-system]
