--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ envyaml = "^1.10.211231"
 httpx = "^0.27.0"
 plotly = "^5.23.0"
 mplfinance = "^0.12.10b0"
+bs4 = "^0.0.2"
+lxml = "^5.3.0"
 
 
 [build-system]
