update gRPC microservice (update pools.proto, update typescript code - at now, we get data about pool in python part, and parse bytes data in typescript part). add bitquery support (at now, we use websockets to get price mints, instead a long polling). add DexScreener Moonshot support (add scanner new mints in moonshot programm, add system of getting price moonshot mints). now code is faster, more stable and safer (all works in 1 thread, 1 process, and it work faster)!

--- a/config.yml
+++ b/config.yml
@@ -21,3 +21,6 @@ microservices:
   raydium:
     host: $GRPC_HOST_RAYDIUM|127.0.0.1
     port: $GRPC_PORT_RAYDIUM|50051
+
+bitquery:
+  token: $BITQUERY_TOKEN
