--- a/ts/package.json
+++ b/ts/package.json
@@ -5,11 +5,12 @@
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
+    "@types/bn.js": "^5.1.5",
     "async": "^3.2.6",
+    "bn": "^1.0.5",
     "google-protobuf": "^3.21.4",
     "ts-proto": "^2.0.3",
-    "ts-protoc-gen": "^0.15.0",
-    "@types/bn.js": "^5.1.5"
+    "ts-protoc-gen": "^0.15.0"
   },
   "main": "index.ts"
 }
