--- a/config.yml
+++ b/config.yml
@@ -21,6 +21,14 @@ microservices:
   raydium:
     host: $GRPC_HOST_RAYDIUM|127.0.0.1
     port: $GRPC_PORT_RAYDIUM|50051
+    
+  grpc:
+    host: $GRPC_HOST|127.0.0.1
+    port: $GRPC_PORT|50051
+
+  moonshot:
+    private_key: $WALLET_MOONSHOT_PRIVATE_KEY
+    rpc_endpoint: $MOONSHOT_RPC_ENDPOINT|https://api.mainnet-beta.solana.com
 
 bitquery:
   token: $BITQUERY_TOKEN
