--- a/ts/package.json
+++ b/ts/package.json
@@ -6,11 +6,17 @@
     "@grpc/reflection": "^1.0.4",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@types/bn.js": "^5.1.5",
+    "@wen-moon-ser/moonshot-sdk": "^3.0.1-alpha-0.0.2",
     "async": "^3.2.6",
+    "axios": "^1.7.7",
     "bn": "^1.0.5",
+    "borsh": "^2.0.0",
+    "bs58": "^6.0.0",
+    "dotenv": "^16.4.5",
     "google-protobuf": "^3.21.4",
     "ts-proto": "^2.0.3",
-    "ts-protoc-gen": "^0.15.0"
+    "ts-protoc-gen": "^0.15.0",
+    "tsc": "^2.0.4"
   },
   "main": "index.ts"
 }
