--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ua-generator = "^1.0.4"
 betterproto = {extras = ["compiler"], version = "^1.2.5"}
 grpcio-tools = "^1.66.1"
 pydantic = "^2.8.2"
+apscheduler = "^3.10.4"
 
 
 [build-system]
