--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,13 @@ services:
       dockerfile: Dockerfile.ts
     
     ports:
-      - 50051:5051
+      - 50052:5051
     
+    volumes:
+      - ./ts:/app
+
+    env_file:
+      - .env
     # command: curl --help
 
     healthcheck:
