--- a/ts/package.json
+++ b/ts/package.json
@@ -4,7 +4,15 @@
     "@grpc/grpc-js-xds": "^1.11.0",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
+    "@jup-ag/api": "^6.0.29",
+    "@mercurial-finance/dynamic-amm-sdk": "^1.1.6",
+    "@mercurial-finance/vault-sdk": "^2.2.1",
+    "@project-serum/anchor": "^0.26.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
+    "@raydium-io/raydium-sdk-v2": "^0.1.71-alpha",
+    "@solana/spl-token": "^0.4.8",
+    "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/web3.js": "^1.95.3",
     "@types/bn.js": "^5.1.5",
     "@wen-moon-ser/moonshot-sdk": "^3.0.1-alpha-0.0.2",
     "async": "^3.2.6",
@@ -12,11 +20,16 @@
     "bn": "^1.0.5",
     "borsh": "^2.0.0",
     "bs58": "^6.0.0",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "google-protobuf": "^3.21.4",
+    "promise-retry": "^2.0.1",
     "ts-proto": "^2.0.3",
     "ts-protoc-gen": "^0.15.0",
     "tsc": "^2.0.4"
   },
-  "main": "index.ts"
+  "main": "index.ts",
+  "devDependencies": {
+    "@types/promise-retry": "^1.1.6"
+  }
 }
