--- a/ts/package.json
+++ b/ts/package.json
@@ -14,6 +14,8 @@
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.3",
     "@types/bn.js": "^5.1.5",
+    "@types/node": "^22.7.6",
+    "@types/promise-retry": "^1.1.6",
     "@wen-moon-ser/moonshot-sdk": "^3.0.1-alpha-0.0.2",
     "async": "^3.2.6",
     "axios": "^1.7.7",
@@ -26,10 +28,9 @@
     "promise-retry": "^2.0.1",
     "ts-proto": "^2.0.3",
     "ts-protoc-gen": "^0.15.0",
-    "tsc": "^2.0.4"
+    "tsc": "^2.0.4",
+    "types": "^0.1.1",
+    "ts-node": "^10.9.2"
   },
-  "main": "index.ts",
-  "devDependencies": {
-    "@types/promise-retry": "^1.1.6"
-  }
+  "main": "index.ts"
 }
