--- a/ts/package.json
+++ b/ts/package.json
@@ -30,7 +30,8 @@
     "ts-protoc-gen": "^0.15.0",
     "tsc": "^2.0.4",
     "types": "^0.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "main": "index.ts"
 }
