--- a/ts/package.json
+++ b/ts/package.json
@@ -7,6 +7,7 @@
     "@jup-ag/api": "^6.0.29",
     "@mercurial-finance/dynamic-amm-sdk": "^1.1.6",
     "@mercurial-finance/vault-sdk": "^2.2.1",
+    "@metaplex-foundation/js": "^0.20.1",
     "@project-serum/anchor": "^0.26.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@raydium-io/raydium-sdk-v2": "^0.1.71-alpha",
@@ -25,12 +26,13 @@
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
     "google-protobuf": "^3.21.4",
+    "hpagent": "^1.2.0",
     "promise-retry": "^2.0.1",
+    "ts-node": "^10.9.2",
     "ts-proto": "^2.0.3",
     "ts-protoc-gen": "^0.15.0",
     "tsc": "^2.0.4",
     "types": "^0.1.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "main": "index.ts"
