--- a/config.yml
+++ b/config.yml
@@ -30,6 +30,10 @@ microservices:
     private_key: $WALLET_MOONSHOT_PRIVATE_KEY
     rpc_endpoint: $MOONSHOT_RPC_ENDPOINT|https://api.mainnet-beta.solana.com
     logger_chat_id: "-4561244958"
+  
+  redis:
+    host: $REDIS_HOST|127.0.0.1
+    port: $REDIS_PORT|6379
 
 bitquery:
   token: $BITQUERY_TOKEN
