add .env file to app service in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     volumes:
       - .:/app
 
+    env_file:
+      - .env
+
     depends_on:
       raydium_microservice:
         condition: service_healthy
